--- a/book-notes/ch04.md
+++ b/book-notes/ch04.md
@@ -1,3 +1,20 @@
+# ch04
+
+
+
+## Article
+
+```ruby
+class Article < ApplicationRecord
+  validates :title, :body, presence: true
+end
+```
+
+
+
+## ArticlesController
+
+```ruby
 class ArticlesController < ApplicationController
   before_action :set_article, only: %i[show edit update destroy]
 
@@ -67,3 +84,5 @@ class ArticlesController < ApplicationController
     params.require(:article).permit(:title, :location, :excerpt, :body, :published_at)
   end
 end
+```
+
